# adaptor_for_biocypher

./: .gitignore  ADAPTERS_README.md  FINAL_SUCCESS_REPORT.md  Makefile  PIPELINE_USAGE.md  QUICK_START_GUIDE.md  README.md  STATUS_REPORT.md  TROUBLESHOOTING.md  UNIPROT_SUCCESS_REPORT.md  chembl_simple_example.py  clear_and_upload.py  create_all_missing_proteins_and_relationships.py  create_biological_knowledge_graph.py  create_missing_proteins.py  create_working_kg_with_ppi.py  create_working_relationships.py  debug_edge_creation.py  debug_edge_creation2.py  debug_node_ids.py  debug_relationship_upload.py  debug_uniprot_mapping.py  demo.py  demo_fixed_string_adapter.py  docker-compose.yml  final_complete_upload.py  fix_relationships_final.py  import_to_neo4j.cypher  neo4j_import_queries.cypher  pyproject.toml  quick_create_relationships.py  run_neo4j_docker.sh  run_pipeline.py  run_tests.py  setup.py  simple_example.py  test_adapters_import.py  test_basic_setup.py  test_edge_fix.py  test_environment.py  (+11 more)
config/: schema_config.yaml
examples/: adapter_combinations.md  chembl_example.py  comprehensive_example.py  opentargets_example.py  string_example.py  uniprot_example.py
pipeline/: README.md  __init__.py
pipeline/adapters/: __init__.py  base_adapter.py  chembl_adapter.py  disease_adapter.py  disgenet_adapter.py  go_adapter.py  opentargets_adapter.py  orthology_adapter.py  phenotype_adapter.py  ppi_adapter.py  reactome_adapter.py  side_effect_adapter.py  string_adapter.py
pipeline/config/: schema_config.yaml
tests/: test_adapters.py  test_integration.py
(+16 files in other folders)
