[tool.poetry]
name = "biocypher-project-template"
version = "0.10.1"
description = "Template for creating a BioCypher-driven knowledge graph"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Andreas Maier <andreas.maier-1@uni-hamburg.de>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "0.10.1"
pypath-omnipath = "^0.16.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
h5py = "^3.8.0"
tqdm = "^4.65.0"
pydantic = "^2.0.0"
bioregistry = "^0.10.0"
requests = "^2.31.0"
chembl-webresource-client = "^0.10.8"
pronto = "^2.5.0"
paramiko = "^2.12.0"
duckdb = "^1.0.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
